--- a/Phonix/Phonix.nuspec
+++ b/Phonix/Phonix.nuspec
@@ -10,5 +10,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright 2014</copyright>
+	<tags>phonetic, spell checker, metaphone</tags>
   </metadata>
 </package>
