changes on readme

--- a/Phonix.Tests/Phonix.Tests.csproj
+++ b/Phonix.Tests/Phonix.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="MatchRatingApproachTests.cs" />
     <Compile Include="MetaphoneTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoundexTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Phonix\Phonix.csproj">
