--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,7 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+/.vs
+/Phonix/.vs
+/Phonix/project.lock.json
+/Phonix.Tests/project.lock.json
