--- a/Phonix/Phonix.csproj
+++ b/Phonix/Phonix.csproj
@@ -13,6 +13,7 @@
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    <ReleaseVersion>1.0.5</ReleaseVersion>
   </PropertyGroup>
 
 </Project>
